style/style.css
html, body {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Roboto', sans-serif;
  color: #011627;
  background-color: #FDFFFC;
}

main, main h1, main h2, main p, main ul {
  margin: 1rem;
  text-align: center;
}

main {
  width: 768px;
}

main h1 {
  font-size: 3rem;
  font-weight: bold;
}

main h2 {
  font-size: 2rem;
}

main p {
  font-size: 1.2rem;
  line-height: 1.5rem;
}

main img {
  width: 360px;
  border-radius: 50%;
}

main a {
  color: #E71D36;
  font-weight: bold;
}

main a:hover {
  text-decoration:none;
}

main ul li {
  display: inline;
}

main ul a {
  color: #011627;
}

/* Styles for mobile devices. */
@media only screen and (max-width: 767px) {
  html, body {
    display: inline;
  }

  main, main h1, main h2, main p, main ul {
    text-align: left;
  }

  main {
    width: 90%;
    margin: 1rem auto;
  }

  main img {
    width: 100%;
  }
}

